--- a/index.html
+++ b/index.html
@@ -1,30 +1,47 @@
-<div class="container">
-    <br>
-    <p>Hello</p>
-    <h1 class="text-white">User</h1>
-    <div class="secontainer">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js" type="text/Javascript">
+    <title>Bookmark Maker</title>
+</head>
+<body>
+    <div class="container">
         <br>
-        <h2 class="text-center mt-1">Bookmark Your Favorite Sites</h2>
-        <form id="bookmarkForm" class="form">
-            <label for="siteNameInput">SITE NAME</label>
+        <p>Hello</p>
+        <h1 class="text-white">User</h1>
+        <div class="secontainer">
             <br>
-            <input type="text" name="" id="siteNameInput" value="" placeholder="Enter site name" />
-            <p id="siteNameErrMsg"></p>
+            <h2 class="text-center mt-1">Bookmark Your Favorite Sites</h2>
+            <form id="bookmarkForm" class="form">
+                <label for="siteNameInput">SITE NAME</label>
+                <br>
+                <input type="text" name="" id="siteNameInput" value="" placeholder="Enter site name" />
+                <p id="siteNameErrMsg"></p>
+                <br>
+                <br>
+                <label for="siteUrlInput">SITE URL</label>
+                <br>
+                <input type="url" name="" id="siteUrlInput" value="" placeholder="Enter site url" />
+                <p id="siteUrlErrMsg"></p>
+                <br>
+                <br>
+                <button class="btn btn-primary" id="submitBtn">Submit</button>
+                <br>
+                <br>
+            </form>
             <br>
-            <br>
-            <label for="siteUrlInput">SITE URL</label>
-            <br>
-            <input type="url" name="" id="siteUrlInput" value="" placeholder="Enter site url" />
-            <p id="siteUrlErrMsg"></p>
-            <br>
-            <br>
-            <button class="btn btn-primary" id="submitBtn">Submit</button>
-            <br>
-            <br>
-        </form>
-        <br>
-        <ul id="bookmarksList">
+            <ul id="bookmarksList">
 
-        </ul>
+            </ul>
+        </div>
     </div>
-</div>
+    <script src='script.js'></script>
+</body>
+</html>
